[metadata]
name = catplist
version = 0.0.9
author = Yoshtec
author_email = yoshtec@gmail.com
description = Print apple plist files in a readable and comprehensible way
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yoshtec/catplist
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Environment :: Console
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: OS Independent
keywords =
    plist
    apple
    cat
    metadata

[options]
packages = find:
install_requires =
    click
    ruamel.yaml
python_requires = >=3.5

[options.entry_points]
console_scripts =
    catplist = catplist.catplist:catplist
    plistcat = catplist.catplist:catplist
